#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([PowerGL], [0.1.0], [omerfarukkalkan@outlook.com.tr])
AC_CONFIG_SRCDIR([src/powergl.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

LT_PREREQ([2.4.6])
LT_INIT

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
		 src/Makefile
                 src/util/Makefile
		 						 src/util/app/Makefile
                 src/util/window/Makefile
                 src/util/window/xorg/Makefile])
AC_OUTPUT
