AM_CFLAGS = -I$(top_srcdir)/rendering

noinst_LTLIBRARIES = libpowerglrendering.la
libpowerglrendering_ladir = $(includedir)/powergl/rendering
libpowerglrendering_la_HEADERS = \
	object.h \
	objectlibrary.h \
	pipeline.h \
	visualscene.h \
	dae2object.h
libpowerglrendering_la_LDFLAGS = -no-undefined
libpowerglrendering_la_SOURCES = \
	object.c \
	objectlibrary.c \
	pipeline.c \
	visualscene.c \
	dae2object.c
