AM_CFLAGS = -I$(top_srcdir)/util/app/appmanager
noinst_LTLIBRARIES = libpowerglutilappappmanager.la
libpowerglutilappappmanager_ladir = $(includedir)/powergl/util/app/appmanager
libpowerglutilappappmanager_la_HEADERS = \
	appmanager.h
libpowerglutilappappmanager_la_LDFLAGS = -no-undefined
libpowerglutilappappmanager_la_SOURCES = \
	appmanager.c

