AM_CFLAGS = -I$(top_srcdir)/util/window/xorg
noinst_LTLIBRARIES = libpowerglutilwindowxorg.la
libpowerglutilwindowxorg_ladir = $(includedir)/powergl/util/window/xorg
libpowerglutilwindowxorg_la_HEADERS = \
	xorg.h
libpowerglutilwindowxorg_la_SOURCES = \
	xorg.c
libpowerglutilwindowxorg_la_LDFLAGS = -no-undefined
